# aiGenVST

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CODE_REFERENCE.md  DELIVERY_SUMMARY.md  FILE_TREE.md  IMPLEMENTATION_PLAN.md  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  STRETCH_GOALS.md  build.bat  build.sh
Source/: AIGenerator.cpp  AIGenerator.h  PitchDetector.cpp  PitchDetector.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SamplerEngine.cpp  SamplerEngine.h
python_backend/: generator.py  requirements.txt  requirements_test.txt  server.py  test_server.py
